# omega-memory

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  funding.json  pyproject.toml  server.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
.well-known/mcp/: server-card.json
assets/: generate_demo_gif.py  generate_social_preview.py
hooks/: auto_capture.py  fast_hook.py  session_start.py  surface_memories.py
src/omega/: __init__.py  bridge.py  cli.py  crypto.py  graphs.py  protocol.py  sqlite_store.py
src/omega/server/: handlers.py  hook_server.py  http_server.py  mcp_server.py  tool_schemas.py
tests/: conftest.py  test_checkpoint.py  test_crypto.py  test_hook_ux_outputs.py  test_http_server.py  test_improvements.py  test_integration.py  test_intelligence.py  test_server.py  test_sqlite_store.py  test_uat_memory.py
